# ocaml-instr-freq

./: .gitignore  .ocamlformat  .travis.yml  README.md  dune-project  ocaml-instr-freq.install  ocaml-instr-freq.opam
doc/: matcher.sexp
lib/: compare_functions.ml  compare_functions.mli  dune  equivalence.ml  equivalence.mli  equivalence_class.ml  equivalence_class.mli  equivalence_comparisons.ml  index.ml  index.mli  loop_free_block.ml  loop_free_block.mli  stats.ml  stats.mli  strict_comparisons.ml  types.ml  utils.ml
patterns/: def_use.ml  def_use.mli  dune  lib.ml  pattern_double_mov.ml  pattern_load_add.ml  pattern_simple_add.ml
test/: dune  test.expected  test.ml
test/fixtures/: long_function.ml  repetitive.ml  simple.ml
test/plugin/: simple.ml
